EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==02/24/2011==
Trevius: Power Source slot can now be augmented.
Trevius: Corrected spell formula 122 (Splurt) and implemented the reverse splurt (Ex. Corath Venom) where damage reduces each tic.

==02/22/2011==
gaeorn: (sorvani) fix to make swarm pets not be targetable as NPCs

==02/19/2011==
Trevius: Added variable export $slotid to EVENT_ITEM_CLICK and EVENT_ITEM_CLICK_CAST, which exports the slot id of the item that triggered the event.

==02/18/2011==
Trevius: Fixed a potential crash in TrySpellOnKill().
Derision: Underfoot: Bard instrument modifiers now show (as focus effects) in the item stats window.
Derision: Allowed fishing in 'VWater' (Region type 7) on the basis this is the only type of water in Sleeper and you can apparently fish there.

==02/17/2011==
Derision: Fixed bug in GetZoneForage where generally only the first three zone specific items could actually be foraged.
gaeorn: (sorvani) fix for bard pacify songs

==02/13/2011==
Trevius: Finalized implementation of Item Faction Mods.  The bonuses now remove if the item is unequiped.
Trevius: Added Rule Character::ItemCastsUseFocus - If true, this allows item clickies to use focuses that have limited max levels on them
Derision: Handle Spell duration formula 15 (for Distillate of Skinspikes).

Optional SQL:
utils/sql/svn/1859_optional_item_casts_use_focus_rule.sql

==02/11/2011==
Trevius: Implemented item faction modifier stats (i.e. factionmod1, factionamt1).
Trevius: Added Power Source slot to item stat (charm) scaling.
Derision: SoD+: Fixed bug when looting items from last two inventory slots (commonly seen when using Loot All).
gaeorn: only send hp/mana/endurance updates to group members when in raid instead of entire raid

==02/10/2011==
JJ: (c0ncrete) Fixed shared bank database query to match schema.

==02/08/2011==